Removed unnecessary mix-blend-mode which was causing a bug on mobile Chrome

--- a/themes/201706-sj/src/components/_logo.scss
+++ b/themes/201706-sj/src/components/_logo.scss
@@ -11,7 +11,6 @@
         font-weight: 800;
         letter-spacing: -0.3rem;
         color: white;
-        mix-blend-mode:difference;
         display: inline-block;
     }
 }
